[package]
name = "lien"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.0"
license = "CC0-1.0"
description = "Scoped lending of borrowed references"
repository = "https://github.com/twilligon/lien"
keywords = ["scope", "borrow", "zerocopy", "smart-pointer", "thread"]
categories = ["concurrency", "memory-management", "no-std", "rust-patterns"]

[features]
default = ["std"]
spin = []
std = []

[dependencies]

[target.'cfg(any(target_os = "android", target_os = "dragonfly", target_os = "freebsd", target_os = "linux", target_os = "netbsd", target_os = "openbsd", target_vendor = "apple"))'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading"] }
